[P4PU-1063] getPublicInstallmentsByIuvOrNav API
