# src/main/java/it/gov/pagopa/arc/controller/InstallmentControllerImpl.java
@@ -1,0 +1,27 @@
+package it.gov.pagopa.arc.controller;
+
+import it.gov.pagopa.arc.controller.generated.InstallmentApi;
+import it.gov.pagopa.arc.service.installment.InstallmentFacadeService;
+import it.gov.pagopa.pu.citizen.dto.generated.InstallmentDebtorExtendedDTO;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
+
+@Slf4j
+@RestController
+public class InstallmentControllerImpl implements InstallmentApi {
+
+    private final InstallmentFacadeService installmentFacadeService;
+
+    public InstallmentControllerImpl(InstallmentFacadeService installmentFacadeService) {
+        this.installmentFacadeService = installmentFacadeService;
+    }
+
+    @Override
+    public ResponseEntity<List<InstallmentDebtorExtendedDTO>> getPublicInstallmentsByIuvOrNav(Long brokerId, String iuvOrNav, String debtorFiscalCode, String orgFiscalCode) {
+        log.info("Requested getPublicInstallmentsByIuvOrNav on brokerId {} iuvOrNav {}", brokerId, iuvOrNav);
+        return ResponseEntity.ok(installmentFacadeService.getPublicInstallmentsByIuvOrNav(brokerId, iuvOrNav, debtorFiscalCode, orgFiscalCode));
+    }
+}
